--- a/android/Application/build.gradle
+++ b/android/Application/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.1'
     }
 } 
 
@@ -17,12 +18,9 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '27.0.3'
     defaultConfig {
-        jackOptions {
-            enabled true
-        }
         applicationId 'com.ezrasavard.suninface'
         minSdkVersion 23
         targetSdkVersion 23
@@ -44,6 +42,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:23.0.0'
 }
